# gitcontext

./: CLAUDE.md  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: test.yml
examples/: output-deep-lerobot.md  output-fastapi.md  output-lerobot.md  output-pydantic.md  workflow.yml
src/gitcontext/: __init__.py  analyzer.py  cache.py  cli.py  deep.py  file_selector.py  github.py  import_graph.py  utils.py
src/gitcontext/detectors/: __init__.py  build.py  ci.py  framework.py  language.py  testing.py
src/gitcontext/generators/: __init__.py  claude_md.py
tests/: test_analyzer.py
