[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitcontext"
version = "0.1.0"
description = "Auto-generate AI context docs (CLAUDE.md / AGENTS.md) for any codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Jash Shah", email = "jashshah999@gmail.com"}]
keywords = [
    "ai",
    "claude",
    "agents",
    "context",
    "codegen",
    "developer-tools",
    "llm",
    "documentation",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = ["click", "pyyaml", "tomli; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/jashshah999/gitcontext"
Repository = "https://github.com/jashshah999/gitcontext"
Issues = "https://github.com/jashshah999/gitcontext/issues"

[project.optional-dependencies]
deep = ["anthropic>=0.40"]
gemini = ["google-generativeai>=0.8"]
all = ["anthropic>=0.40", "google-generativeai>=0.8"]

[project.scripts]
gitcontext = "gitcontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitcontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
